# status-checker

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-image.yml
src/status_checker/: __init__.py  cli.py  serve.py  status_mode.py
src/status_checker/providers/: github.py  gitlab.py
tests/: test_cli.py  test_github_provider.py  test_gitlab_provider.py
