[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "status-checker"
version = "0.1.0"
description = "CLI to check reachability and latency for GitHub and GitLab (API, web, optional SSH)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Nicole"}]
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.10.0",
]

[project.scripts]
status-checker = "status_checker.cli:entrypoint"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
